assets/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

/* General*/

body{
  font-family: 'Nunito', sans-serif;
}

/* --------------------------------- Home Page*/

h1{
  color: #2B1C63;
  font-weight: 700;
}

h2 p{
  color: #424242;
}


.landing{
  min-height: 100vh;
  background-color: #57039D;
  background-position: bottom 60vh right 60vw, bottom 50vh left 60vw;
  background-repeat: no-repeat, no-repeat;
  min-width: 100vw;
}

.navbar{
background-color: transparent;
}
.navbar-color {
    background-color: #57039D;
}

.navbar-brand{
  color: white;
  font-weight: 800;

}
.nav > li > a:hover{
  color: #DE786F;
}

li.active > a {
  border-bottom: 3px solid white;
}
.logo{
  font-weight: 800;
  padding-left:50px;
  font-size: 36px;
  padding-top: 20px;
}

.logo:hover{
  color: #DE786F;
}

.navhome a{
  color: white;
  font-size: 20px;
}

.home-heading{
  color: white;
  font-size: 80px;
}

.nav-link{
  color: #57039D;
}

.landing-img{
  width: 100%;
}

.landing-row{
  padding-top: 15%;
}

.home-intro{
  color: white;
  font-size:30px;
  padding-top: 30px;
}

.intro-btn-div{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 200px;
}

.intro-btn{
  background-color: #9CF23C;
  color: #000000;
  border-radius: 30px;
  padding-left: 30px;
  padding-right: 30px;
  padding: 20px;
  margin-top: 100px;
  font-weight: 700;
  
}

.intro-btn:hover{
  background-color: #DE786F;
}

.triangle-home {
  width: 0;
  height: 0;
  float: left;
  margin-right: 35px;
  border-left: 25px solid transparent;
  border-right: 25px solid transparent;
  border-bottom: 50px solid #9CF23C;
}

.arrow {
  color: #ffffff;
  font-size: 50px;
  cursor: pointer;
  position: absolute;
  bottom: 50px;
  left: 51%;
  margin-left: -25px;
}

/*----------- Role models section */

.rolemodels-img {
  width: 80%;
}

.rolemodels-info {
  text-align: left;
  font-size: 1.2rem;
  font-style: italic;
  color: #5e5d5d;
}

/* Code for talk bubble adapted from:
https://codepen.io/Founts/pen/gmhcl */

.talk-bubble {
	margin: 40px;
  display: inline-block;
  position: relative;
	width: 90%;
	height: auto;
	background-color: #fff;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  padding: 2rem;
  -webkit-filter: drop-shadow(4px 6px 4px #a8a8aa);
          filter: drop-shadow(4px 6px 4px #a8a8aa);
}

.rolemodel-p {
  margin-top: 0;
  margin-bottom: 1rem;
  text-align: start;
  font-size: 20px;
  color: #424242;
}


.round{
  border-radius: 70px;
	-webkit-border-radius: 60px;
	-moz-border-radius: 60px;

}

.tri-right.border.right-in:before {
  content: " ";
  position: absolute;
  width: 0;
  height: 0;
  left: auto;
  right: -40px;
  top: 200px;
  bottom: auto;
  background-color: #fff;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
.tri-right.right-in:after {
  content: " ";
  position: absolute;
  width: 0;
  height: 0;
  left: auto;
  right: -20px;
  top: 222px;
  bottom: auto;
  border: 12px solid #fff;
  border-radius: 20%;
  border-color: transparent transparent #fff #fff  ;
}

/* Arrow for tip */
/* Original Code with modifications from https://codepen.io/bright-digital/pen/KzgPry */

/* right bounce */
@-webkit-keyframes bounceRight {
  0%,
  20%,
  50%,
  80%,
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
  40% {
    -webkit-transform: translateX(-30px);
    transform: translateX(-30px);
  }
  60% {
    -webkit-transform: translateX(-15px);
    transform: translateX(-15px);
  }
}
@-moz-keyframes bounceRight {
  0%,
  20%,
  50%,
  80%,
  100% {
    transform: translateX(0);
  }
  40% {
    transform: translateX(-30px);
  }
  60% {
    transform: translateX(-15px);
  }
}
@keyframes bounceRight {
  0%,
  20%,
  50%,
  80%,
  100% {
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
  40% {
    -ms-transform: translateX(-30px);
    transform: translateX(-30px);
  }
  60% {
    -ms-transform: translateX(-15px);
    transform: translateX(-15px);
  }
}

/* assign bounce */
.fa-arrow-circle-right {
  -webkit-animation: bounceRight 2s infinite;
  animation: bounceRight 2s infinite;
}

/* Code for flip-card effect adapted from:
https://www.w3schools.com/howto/howto_css_flip_card.asp
*/


.flip-card {
    background-color:#fff;
    width: 300px;
    height: 490px;
    border-radius: 20px;
    -webkit-box-shadow: 3px 3px 4px 2px #33333333;
            box-shadow: 3px 3px 4px 2px #33333333;
  }
  
  .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    -webkit-transition: -webkit-transform 0.8s;
    transition: -webkit-transform 0.8s;
    -o-transition: transform 0.8s;
    transition: transform 0.8s;
    transition: transform 0.8s, -webkit-transform 0.8s;
    -webkit-transform-style: preserve-3d;
            transform-style: preserve-3d;
    background-color: #fdf4d4fd;
  }
  
  /* Do an horizontal flip when you move the mouse over the flip box container */
  .flip-card:hover .flip-card-inner {
    -webkit-transform: rotateY(180deg);
            transform: rotateY(180deg);
  }

  .flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden; /* Safari */
    backface-visibility: hidden;
    background-color: #f8f1dcfd;
    
    border-radius: 6px;
  } 
  
  /* Style the back side */
  .flip-card-back {
    color: #7c5a2d;
    -webkit-transform: rotateY(180deg);
            transform: rotateY(180deg);
    font-size: .9rem;
    padding: .5rem;
  }

  .front-text {
    
    padding: 6% 0 4%;
    border-radius: 20px;
    margin: 0 .5rem;
  }

  .flip-card-img {
    width: 90%;
  }

.main__logo-container___3uyPh {
    visibility: hidden;
}
/* -------------------- Mentors Page*/
.mentor-avatar {
    width: 200px;
    height: 200px;
}
#mentor-section h2 {
    font-weight: 700;
    color: #57039D;
    padding: 40px 0;
    font-size: 46px;
}
#mentor-section h4 {
    font-weight: 700;
    color: #DE786F;
    font-size: 28px;
}
.profile {
    margin-right: 10px;
    margin-left: 10px;
    margin-bottom: 80px;
     -webkit-box-shadow: 3px 3px 4px 2px #33333333;
            box-shadow: 3px 3px 4px 2px #33333333;
}

 /* -------------------- Resources Page*/

 div .col{
    padding: 5px;
  }
  
  .card-learn{
    border: none;
    background-color: #2B1C63;
    color: #fff;
    border-radius: 20px;
    
  }

  .learn-card-title{
    color: #DE786F;
    font-weight:800;
  }

  .learn-card-link {
    text-decoration: none;
    color: #9CF23C;
  }

  .learn-card-link:hover {
    text-decoration: none;
    color: #fff;
  }
  
  .learn-more-icon{
      padding-left: 10px;
  }
    
  .learn-card-icon{
      padding-left: 30px;
      padding-top: 30px;
      font-size: 30px;
  }

  @media only screen and (min-width: 576px) {
    .rolemodels-img {
      width: 60%;
    }
  }

  @media only screen and (min-width: 768px) {
    /* For desktop: */
  .resources-intro{
    padding-top: 60px;
  }

  #learn-img{
    max-width: 70%;
    float: right;
    margin-left: 70%;
    margin-bottom: 50px;

  }

  .subheading-resources{
    padding-top: 80px;
    
  }
}

.circle {
  width: 50px;
  height: 50px;
  background: #9CF23C;
  border-radius: 50%;
  float: right;
  margin-right: -35px;
}

.triangle{
  width: 0;
  height: 0;
  float: right;
  margin-right: -35px;
  border-left: 25px solid transparent;
  border-right: 25px solid transparent;
  border-bottom: 50px solid #9CF23C;
}

/* Challenges page */
#challenge-img {
  background-image: url("../images/web-design.png");
  background-repeat: no-repeat;
  background-position: center top;
  background-size: contain;
}
/* -------------------- Footer*/
#footer{
    background-color: #57039D;
    padding: 60px;
}
#footer h2 {
    padding-bottom: 20px;
    color: white;
    font-size: 46px;
}
.github-links li {
    display: inline;
    list-style: none;
}
.github-links {
    padding-left: 5px;
    padding-right: 5px;
    margin-bottom: 0;
}
.github-links a {
    font-size: 150%;
    padding-right: 2%;
    padding-left: 2%;
}
.github-links img {
    height: 50px;
    width: 50px;
}
.text-centre {
    text-align: center;
}

